language/move-lang/tests/move_check/parser/function_incomplete.exp
error: 

   ┌── tests/move_check/parser/function_incomplete.move:1:9 ───
   │
 1 │ main() {
   │         ^ Unrecognized End of File
   ·
 1 │ main() {
   │         - Expected:  "!", "&", "&mut ", "(", "()", "*", "-", "::", "abort", "break", "continue", "copy", "false", "if", "let", "loop", "move", "return", "true", "while", "{", "}", r#"0[xX][0-9a-fA-F]+"#, r#"[0-9]+"#, r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

